add GLEW/Opengl to cmake

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -13,9 +13,14 @@ include_directories(${ECS_INCLUDE_DIRS})
 # Find GLFW library
 find_package(GLFW 3.0.0 REQUIRED)
 
+# Find GLEW library
+find_package(GLEW 3.0.0 REQUIRED)
+
+# Find Opengl library
+find_package(OpenGL REQUIRED)
 
 # Add project and libraries includes
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${GLFW_INCLUDE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
 
 
 # Create executable
@@ -23,4 +28,4 @@ add_executable(${EXECUTABLE_NAME} ${source_files})
 
 
 # Link libraries with executable
-target_link_libraries(${EXECUTABLE_NAME} ECS ${GLFW_LIBRARY})
+target_link_libraries(${EXECUTABLE_NAME} ECS ${GLFW_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_gl_LIBRARY})
