fix compilation errors + move Components in Engine project + rename file

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -11,6 +11,10 @@ file(GLOB_RECURSE include_files include/*)
 include_directories(${ECS_INCLUDE_DIRS})
 
 
+# Use static lib of glew
+add_definitions(-DGLEW_STATIC)
+
+
 # Find GLFW library
 find_package(GLFW 3.0.0 REQUIRED)
 
