EntityFactory/ComponentFactory create entity archetypes

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -6,6 +6,7 @@ project(${EXECUTABLE_NAME})
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
+file(GLOB_RECURSE jsoncpp_source_files ${CMAKE_SOURCE_DIR}/external/jsoncpp/*.cpp)
 
 # add Engine includes with ENGINE_INCLUDE_DIRS
 include_directories(${ENGINE_INCLUDE_DIRS})
@@ -18,10 +19,12 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Add external includes
 include_directories(${CMAKE_SOURCE_DIR}/external/glm)
+include_directories(${CMAKE_SOURCE_DIR}/external/jsoncpp)
+include_directories(${CMAKE_SOURCE_DIR}/external/dirent)
 
 
 # Create executable
-add_executable(${EXECUTABLE_NAME} ${source_files} ${include_files})
+add_executable(${EXECUTABLE_NAME} ${source_files} ${jsoncpp_source_files} ${include_files})
 
 
 # Link libraries with executable
