--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -6,6 +6,7 @@ project(${EXECUTABLE_NAME})
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
+file(GLOB_RECURSE imgui_source_files ${CMAKE_SOURCE_DIR}/external/imgui/*.cpp*)
 
 # add Engine includes with ENGINE_INCLUDE_DIRS
 include_directories(${ENGINE_INCLUDE_DIRS})
@@ -18,6 +19,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Add external includes
 include_directories(${CMAKE_SOURCE_DIR}/external/glm)
+include_directories(${CMAKE_SOURCE_DIR}/external/imgui/)
 
 
 # Create executable
