CMakeLists.txt : fixed tree structure for VIsual Studio
Modified CMakeLists.txt for each module in order to line up all the files into the Visual Studio tree structure correctly

--- a/ECS/CMakeLists.txt
+++ b/ECS/CMakeLists.txt
@@ -6,6 +6,14 @@ project(${EXECUTABLE_NAME})
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
 
+# Group source files into the Visual Studio tree structure
+message(STATUS "Grouping source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+source_group_files(${source_files})
+
+# Group header files into the Visual Studio tree structure
+message(STATUS "Grouping header files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+source_group_files(${include_files})
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Create library
