--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -2,15 +2,25 @@ cmake_minimum_required(VERSION 3.0)
 set(EXECUTABLE_NAME "ENGINE")
 project(${EXECUTABLE_NAME})
 
-
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
 file(GLOB_RECURSE imgui_source_files ${CMAKE_SOURCE_DIR}/external/imgui/*.cpp*)
 
+# Group source files into the Visual Studio tree structure
+message(STATUS "Grouping source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+source_group_files(${source_files})
+
+# Group header files into the Visual Studio tree structure
+message(STATUS "Grouping header files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+source_group_files(${include_files})
+
+# Group ImGui source files into the Visual Studio tree structure
+message(STATUS "Grouping ImGui source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+source_group_files(${imgui_source_files})
+
 # add ECS includes with ECS_INCLUDE_DIRS
 include_directories(${ECS_INCLUDE_DIRS})
-
 
 # Use static lib of glew
 add_definitions(-DGLEW_STATIC)
