--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 # Add external includes
 include_directories(${CMAKE_SOURCE_DIR}/external/glm)
 include_directories(${CMAKE_SOURCE_DIR}/external/imgui/)
+include_directories(${CMAKE_SOURCE_DIR}/external/imGuizmo/)
 include_directories(${CMAKE_SOURCE_DIR}/external/jsoncpp)
 #include_directories(${CMAKE_SOURCE_DIR}/external/fmod/inc)
 
