Minor fixes regarding project management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
-/**
-* @Author   Guillaume Labey
-* @Author   Mathieu Chassara
-*/
+#    @Author   Guillaume Labey
+#    @Author   Mathieu Chassara
 
 message(STATUS "Current CMake version is: ${CMAKE_VERSION}")
 
