--- a/ECS/CMakeLists.txt
+++ b/ECS/CMakeLists.txt
@@ -1,6 +1,4 @@
-/**
-* @Author   Guillaume Labey
-*/
+#	@Author   Guillaume Labey
 
 cmake_minimum_required(VERSION 3.0)
 set(EXECUTABLE_NAME "ECS")
