--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,7 +1,5 @@
-/**
-* @Author   Guillaume Labey
-* @Author   Mathieu Chassara
-*/
+#	@Author   Guillaume Labey
+#	@Author   Mathieu Chassara
 
 cmake_minimum_required(VERSION 3.0)
 set(EXECUTABLE_NAME "ENGINE")
