Add FindSquirrelEngine + install library and includes

--- a/ECS/CMakeLists.txt
+++ b/ECS/CMakeLists.txt
@@ -1,6 +1,10 @@
 #	@Author   Guillaume Labey
 
 cmake_minimum_required(VERSION 3.0)
+
+# include macros
+include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)
+
 set(EXECUTABLE_NAME "ECS")
 project(${EXECUTABLE_NAME})
 
@@ -8,12 +12,7 @@ project(${EXECUTABLE_NAME})
 file(GLOB_RECURSE source_files src/*)
 file(GLOB_RECURSE include_files include/*)
 
-# Group source files into the Visual Studio tree structure
-message(STATUS "Grouping source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${source_files})
-
-# Group header files into the Visual Studio tree structure
-message(STATUS "Grouping header files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${include_files})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
