--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -7,9 +7,12 @@ include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)
 # define the path of CMake modules
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules/")
 
+# set the output directory for library
+set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
+
 cmake_minimum_required(VERSION 3.0)
-set(EXECUTABLE_NAME "ENGINE")
-project(${EXECUTABLE_NAME})
+set(LIBRARY_NAME "squirrel_engine")
+project(${LIBRARY_NAME})
 
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
@@ -18,36 +21,13 @@ file(GLOB_RECURSE imgui_source_files ${CMAKE_SOURCE_DIR}/external/imgui/*.cpp*)
 file(GLOB_RECURSE imGuizmo_source_files ${CMAKE_SOURCE_DIR}/external/imGuizmo/*.cpp*)
 file(GLOB_RECURSE jsoncpp_source_files ${CMAKE_SOURCE_DIR}/external/jsoncpp/*.cpp)
 
-#file(GLOB_RECURSE fmod_source_files ${CMAKE_SOURCE_DIR}/external/fmod/lib/*.cs*)
-#file(GLOB_RECURSE fmt_source_files ${CMAKE_SOURCE_DIR}/external/fmt/*.cc*)
-
-# Group source files into the Visual Studio tree structure
-message(STATUS "Grouping source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+# Group files into the Visual Studio tree structure
 source_group_files(${source_files})
-
-# Group header files into the Visual Studio tree structure
-message(STATUS "Grouping header files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${include_files})
-
-# Group JsonCpp source files into the Visual Studio tree structure
-message(STATUS "Grouping JsonCpp source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${jsoncpp_source_files})
-
-# Group ImGui source files into the Visual Studio tree structure
-message(STATUS "Grouping ImGui source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${imgui_source_files})
-
-# Group ImGuizmo source files into the Visual Studio tree structure
-message(STATUS "Grouping ImGuizmo source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${imGuizmo_source_files})
 
-# Group FMOD source files into the Visual Studio tree structure
-#message(STATUS "Grouping FMOD source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
-#source_group_files(${fmod_source_files})
-
-# Group fmt source files into the Visual Studio tree structure
-#message(STATUS "Grouping fmt source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
-#source_group_files(${fmt_source_files})
 
 # add ECS includes with ECS_INCLUDE_DIRS
 include_directories(${ECS_INCLUDE_DIRS})
@@ -108,12 +88,12 @@ include_directories(${ASSIMP_INCLUDE_DIR})
 
 # Include dirent only for windows
 # Linux have his own header
-IF (WIN32)
+IF (ENGINE_OS_WINDOWS)
     include_directories(${CMAKE_SOURCE_DIR}/external/dirent)
 ENDIF()
 
 # Create executable
-add_library(${EXECUTABLE_NAME} STATIC ${source_files} ${imgui_source_files} ${include_files} ${imGuizmo_source_files} ${jsoncpp_source_files})
+add_library(${LIBRARY_NAME} STATIC ${source_files} ${include_files} ${imgui_source_files} ${imGuizmo_source_files} ${jsoncpp_source_files})
 
 #Disable ImGui C4244 warnings on Windows
 IF (WIN32)
@@ -121,9 +101,17 @@ IF (WIN32)
 ENDIF()
 
 # Link libraries with executable
-target_link_libraries(${EXECUTABLE_NAME} ECS ${GLFW_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_gl_LIBRARY} ${FMOD_LIBRARY} ${ASSIMP_LIBRARY})
+target_link_libraries(${LIBRARY_NAME} ECS ${GLFW_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_gl_LIBRARY} ${FMOD_LIBRARY} ${ASSIMP_LIBRARY})
 
 
 # Store include dir into variable and share it with other projects through cache
-set(${EXECUTABLE_NAME}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR}
-CACHE INTERNAL "${EXECUTABLE_NAME}: Include Directories" FORCE)
+set(${LIBRARY_NAME}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${ECS_INCLUDE_DIRS}
+CACHE INTERNAL "${LIBRARY_NAME}: Include Directories" FORCE)
+
+# setup the install of the library
+install(TARGETS ${LIBRARY_NAME}
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin)
+install(FILES ${include_files}
+        DESTINATION include/Engine/)
