new build system

--- a/ECS/CMakeLists.txt
+++ b/ECS/CMakeLists.txt
@@ -1,12 +1,16 @@
 #	@Author   Guillaume Labey
 
 cmake_minimum_required(VERSION 3.0)
+set(LIBRARY_NAME "ecs")
+project(${LIBRARY_NAME})
 
 # include macros
-include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Macros.cmake)
 
-set(EXECUTABLE_NAME "ECS")
-project(${EXECUTABLE_NAME})
+string(TOUPPER ${LIBRARY_NAME} LIBRARY_NAME_UPPER)
+
+# set the output directory for library
+set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
 # All source files using glob
 file(GLOB_RECURSE source_files src/*)
@@ -18,9 +22,16 @@ source_group_files(${include_files})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Create library
-add_library(${EXECUTABLE_NAME} STATIC ${source_files} ${include_files})
+add_library(${LIBRARY_NAME} STATIC ${source_files} ${include_files})
+
+# Add debug postfix
+set_target_properties(${LIBRARY_NAME} PROPERTIES DEBUG_POSTFIX -d)
 
 
 # Store include dir into variable and share it with other projects through cache
-set(${EXECUTABLE_NAME}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
-CACHE INTERNAL "${EXECUTABLE_NAME}: Include Directories" FORCE)
+set(${LIBRARY_NAME_UPPER}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
+CACHE INTERNAL "${LIBRARY_NAME}: Include Directories" FORCE)
+
+# Store root dir into variable and share it with other projects through cache
+set(${LIBRARY_NAME_UPPER}_ROOT ${PROJECT_BINARY_DIR}
+CACHE INTERNAL "${LIBRARY_NAME}: Root Directory" FORCE)
