--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -2,58 +2,44 @@
 #	@Author   Mathieu Chassara
 
 cmake_minimum_required(VERSION 3.0)
+
+project("Game")
+
+# include macros
+include(${PROJECT_SOURCE_DIR}/../cmake/Macros.cmake)
+
+# define the path of CMake modules
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../cmake/modules/")
+
+# Add parallel build
+if(ENGINE_COMPILER_MSVC)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+endif()
+
 set(EXECUTABLE_NAME "game")
-project(${EXECUTABLE_NAME})
 
 # All source files using glob
-file(GLOB_RECURSE source_files src/*)
-file(GLOB_RECURSE include_files include/*)
-file(GLOB_RECURSE jsoncpp_source_files ${CMAKE_SOURCE_DIR}/external/jsoncpp/*.cpp)
+file(GLOB_RECURSE source_files ${CMAKE_SOURCE_DIR}/src/*)
+file(GLOB_RECURSE include_files ${CMAKE_SOURCE_DIR}/include/*)
 
-# Group source files into the Visual Studio tree structure
-message(STATUS "Grouping source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
+# Group files into the Visual Studio tree structure
 source_group_files(${source_files})
-
-# Group header files into the Visual Studio tree structure
-message(STATUS "Grouping header files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
 source_group_files(${include_files})
 
-# Group JsonCpp source files into the Visual Studio tree structure
-message(STATUS "Grouping JsonCpp source files in the tree structure... (from ${CMAKE_CURRENT_SOURCE_DIR})")
-source_group_files(${jsoncpp_source_files})
+include_directories(${CMAKE_SOURCE_DIR}/include/)
 
-# add Engine includes with ENGINE_INCLUDE_DIRS
-include_directories(${ENGINE_INCLUDE_DIRS})
+# Find Squirrel Engine
+find_package(Squirrel_Engine REQUIRED)
 
-# add ECS includes with ECS_INCLUDE_DIRS
-include_directories(${ECS_INCLUDE_DIRS})
-
-# Add project includes
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-# Add external includes
-include_directories(${CMAKE_SOURCE_DIR}/external/glm)
-include_directories(${CMAKE_SOURCE_DIR}/external/imgui/)
-include_directories(${CMAKE_SOURCE_DIR}/external/imGuizmo/)
-include_directories(${CMAKE_SOURCE_DIR}/external/jsoncpp)
-
-# Include dirent only for windows
-# Linux have his own header
-IF (WIN32)
-    include_directories(${CMAKE_SOURCE_DIR}/external/dirent)
-ENDIF()
-
-# Use static lib of glew
-# Even if the lib is not directly linked,
-# the macro has to be set to prevent warnings
-add_definitions(-DGLEW_STATIC)
+# add Engine includes with SQUIRREL_ENGINE_INCLUDE_DIR
+include_directories(${SQUIRREL_ENGINE_INCLUDE_DIR})
 
 # Create executable
 add_executable(${EXECUTABLE_NAME} ${source_files} ${include_files})
 
 
 # Link libraries with executable
-target_link_libraries(${EXECUTABLE_NAME} ENGINE)
+target_link_libraries(${EXECUTABLE_NAME} ${SQUIRREL_ENGINE_LIBRARY})
 
 
 
